group 'ru.spbau.mit.javacourse2018'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile("org.junit.jupiter:junit-jupiter-api:5.1.1")
    testCompile("org.junit.jupiter:junit-jupiter-params:5.1.1")
}

test {
    testLogging {
        events "passed", "skipped", "failed"
    }
}
